--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "antd": "^4.16.2",
+    "axios": "^0.21.1",
+    "crypto-js": "^4.0.0",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
+    "react-cookies": "^0.1.1",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
@@ -37,7 +41,9 @@
     ]
   },
   "devDependencies": {
+    "babel-plugin-import": "^1.13.3",
     "react-router-dom": "^5.2.0",
-    "sass-loader": "^10.2.0"
+    "sass-loader": "^10.2.0",
+    "sass-resources-loader": "^2.2.1"
   }
 }
